Correct array functionality and readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,8 +58,7 @@ body {
 .left img,
 .right img {
   width: 100%;
-  height: 100auto%;
-  object-fit: contain;
+  height: auto;
 }
 
 .questionContainer {
